Changelog of sdistmaker
=======================


1.2 (unreleased)
----------------

- **Renamed from tha.sdistmaker to sdistmaker**.


1.1 (2009-12-22)
----------------

- Documentation update.


1.0 (2009-12-21)
----------------

- Setup.py cleanup.


0.4 (2009-11-09)
----------------

- Replacing base and base_on_server the right way around, now.


0.2 (2009-11-09)
----------------

- Cleaning up the tempdir after we're finished with it.  And cd'ing out of
  that dir before zapping it.

- Using buildout's bin/python so that we get setuptools also when run on the
  server where there's no global setuptools.  This assumes we're always run
  within buildout: fine with me.


0.1 (2009-11-06)
----------------

- Added sdist_from_tags script for creating all tarballs.

- Added make_sdist script for creating a single sdist.

- Initial library skeleton created by thaskel.