@@ -1,26 +1,18 @@
 # Defaults for finding tags in an svn repository and creating sdist eggs out
 # of it.
-# You can override it from your buildout by providing a similar file
-# yourself and passing it along to tha.taglist's main() method.
-# Similarly, you can pass along a specific outfile (handy if you want
-# something relative to your buildout directory).
 #
-# [buildout]
-# parts = sdists
-#
-# [sdists]
-# recipe = zc.recipe.egg
-# eggs = sdistmaker
-# scripts = sdists_from_tags
-# arguments =
-#     defaults_file='${buildout:directory}/defaults.py',
-
+# You can get a print of the base defaults.py by doing
+# ``sdists_from_tags --print-example_defaults``.  Save the output as a
+# python file (suggestion: defaults.py).  You can then adapt it to your liking
+# and use it with ``sdists_from_tags --defaults-file=defaults.py``.
 
 # Svn url where to start searching for tag directories.
 BASE = 'https://svn.plone.org/svn/collective/zest.releaser'
 
-# On the server, a file:///.... url is way quicker. BASE is a fallback
-# in case this isn't specified or if the file:/// url doesn't work.
+# If you run sdistmaker on the actual server where you host your subversion
+# repository, a file:///path/to/your/svn.... url is way quicker. BASE is used
+# as a fallback in case BASE_ON_SERVER isn't specified or if the file:/// url
+# doesn't work.
 BASE_ON_SERVER = ''
 
 # Don't recurse into directories named like this:
@@ -29,8 +21,8 @@ BLACKLIST = [
     '.attic',
     ]
 
-# If you see these, there won't be a usable tag deeper down, so just
-# stop looking in this directory.
+# If you see these items in a directory, there won't be a usable tag deeper
+# down, so just stop looking in this directory.
 STOP_INDICATORS = [
     #'src',
     #'setup.py',
@@ -38,6 +30,5 @@ STOP_INDICATORS = [
     #'buildout.cfg',
     ]
 
-# Name of the output "pypi directory.
+# Name of the output "pypi" directory.
 OUTDIR = 'var/private'
-
